--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@trpc/server": "10.0.0-proxy-beta.17",
     "daisyui": "^2.31.0",
     "next": "12.3.1",
+    "node-forge": "^1.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.37.0",
@@ -30,6 +31,7 @@
   },
   "devDependencies": {
     "@types/node": "18.0.0",
+    "@types/node-forge": "^1.3.1",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
     "@typescript-eslint/eslint-plugin": "^5.33.0",
